# Tello_Software

./: .gitignore  README.md  compile_time_tracker.py  install_dependencies.sh  json_prototype  motion_log.txt  notes.txt  platformio.ini  tello-zeros-jigged  tello.json  tello_log-noRT.csv  tello_log.csv  tello_log.txt  tello_time_log.txt
include/: active_animation_log.json  active_playback_log.json  comms.h  compile_time_tracker.h  ecat_master.h  kinematics.h  manipulator_motion.h  mocap.h  mujoco_comms.h  mujoco_main.h  mujoco_utilities.h  sim_config.json  srb_pd_config-SRBM.json  srb_pd_config-auto-with-accel.json  srb_pd_config-telop-6-16-23.json  srb_pd_config.json  srb_pd_config_GOOD_BACKUP.json  srb_pd_config_SRBsim.json  srb_pd_config_TELEOP.json  srb_pd_config_WALKING.json  srb_pd_config_joey.json  state_estimator.h  timer.h  user_config.h  user_profiles.json  utilities.h
include/backup-configs/: srb_pd_config-decent-walking.json  srb_pd_config_SRBsim-good-walking.json
include/phasespace-configs/: CoM-Front.json  CoM-Side.json
include/user-pd-configs/: srb_pd_config_guillermo-backup.json  srb_pd_config_guillermo.json  srb_pd_config_guillermo_autonomous.json  srb_pd_config_joey.json  srb_pd_config_joey_autonomous.json
lib/BNO055/: BNO055.cpp  BNO055.h
lib/CheetahMotor/: cheetah_motor.cpp  cheetah_motor.h
lib/DynamicRobot_RDL/: dynamic_robot.cpp  dynamic_robot.h  limb.h
lib/InEKF/: InEKF.cpp  InEKF.h
lib/Mujoco/model/tello/: TELLO_Simple.xml  tello-6-16-23-animation.xml  tello-6-16-23.xml  tello-hardware-visualization.xml  tello-massive-blue-grey.xml  tello-massive-color.xml  tello-massive-pastel.xml  tello-massive.xml  tello-visualization.xml  tello-with-arms-fake.xml  tello-with-arms.xml  tello.xml
lib/Mujoco/sample/: basic.cc
lib/PS4_Controller/: Definitions.h
lib/PS4_Controller/Driver/: DualShock4.h  DualShock4Connector.h
lib/PS4_Controller/Driver/DataPacket/: DataPacket.h  FingerPairType.h
lib/RTIMULib/IMUDrivers/: RTIMUBNO055.cpp
lib/SRBM-Ctrl/: SRBMController.cpp  SRBMController.h  controllers.cpp  controllers.h  dynamics.cpp  dynamics.h  initialization.cpp  initialization.h  kinematics.cpp  kinematics.h  planner.cpp  planner.h  structs.h  utilities.cpp  utilities.h
lib/SRBM_Kin/: srbm_kinematics.cpp  srbm_kinematics.h  srbm_structs.h  srbm_utilities.cpp  srbm_utilities.h
lib/Tello_IMU/: tello_imu.cpp  tello_imu.h
lib/VectorNav/src/: benchmark.cpp
lib/imFileDialog/: ImFileDialog.h
lib/imGUI/: imgui.h  imgui_internal.h  imgui_widgets.cpp
lib/matlab_include/Halide/: Halide.h
lib/matlab_include/MatlabCppSharedLib/detail/: cppsharedlib_execution_interface_impl.hpp  matlab_runtime_version.hpp
lib/matlab_include/ceres/: camera_projection_factor.hpp  cerescodegen_api.hpp  factor_graph.hpp  imu_factor.hpp
lib/matlab_include/coder/coder_array/: coder_array_rtw.h
lib/matlab_include/nav/: IndexSequenceNAV.hpp  IterableTrait.hpp  NestedMatrix.hpp  NestedMatrixVoidWrapper.hpp  checkMapCollision.hpp  checkmapcollision_api.hpp  nestedmatrix_api.hpp
lib/matlab_include/rst/rbtbuiltins/: RigidBody.hpp  RigidBodyTree.hpp  Utils.hpp  (+1 more)
lib/matlab_include/win64/: mwcomutil.h  mwcomutil.tlb  mwcomutil_i.c
lib/step_z_curve_fit/: CMakeLists.txt  anonymous_function.h  anonymous_function1.h  buildInfo.mat  checkStoppingCriteria.cpp  checkStoppingCriteria.h  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  computeFiniteDifferences.cpp  computeFiniteDifferences.h  curve_function.cpp  curve_function.h  driver.cpp  driver.h  factoryConstruct.cpp  factoryConstruct.h  gcGuiReport.mat  hasFiniteBounds.cpp  hasFiniteBounds.h  linearLeastSquares.cpp  linearLeastSquares.h  lsqcurvefit.cpp  lsqcurvefit.h  projectBox.cpp  projectBox.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  step_z_curve_fit.cpp  step_z_curve_fit.h  step_z_curve_fit_data.h  step_z_curve_fit_initialize.cpp  step_z_curve_fit_initialize.h  step_z_curve_fit_internal_types.h  (+13 more)
lib/step_z_curve_fit/examples/: main.cpp  main.h
lib/step_z_curve_fit/html/: report.mldatx
lib/step_z_curve_fit/interface/: _coder_step_z_curve_fit_api.cpp  _coder_step_z_curve_fit_api.h  _coder_step_z_curve_fit_info.cpp  _coder_step_z_curve_fit_info.h  _coder_step_z_curve_fit_mex.cpp  _coder_step_z_curve_fit_mex.h
src/: comms.cpp  ecat_master.cpp  kinematics.cpp  main.cpp  manipulator_motion.cpp  mocap.cpp  mujoco_comms.cpp  mujoco_main.cpp  mujoco_utilities.cpp  plotting.cpp  plotting.h  state_estimator.cpp  tello_locomotion.cpp  tello_locomotion.h  timer.cpp  utilities.cpp  visualize.cpp
tools/: merge_videos.sh
(+43 files in other folders)
